<resources>
    <string name="app_name">韩纤瘦身</string>

    <!--Main Bottom-->
    <string name="product">产品</string>
    <string name="find">发现</string>
    <string name="left">留言</string>
    <string name="mine">我的</string>
    <!--Main Bottom-->
    
    <!--mine setting-->
    <string name="my_address">我的收货地址</string>
    <string name="my_name">我的昵称</string>
    <string name="updat_password">修改密码</string>
    <string name="find_back_password">找回密码</string>
    <string name="clear_cache">清除缓存</string>
    <string name="edition">版本</string>
    <string name="login_out">退出登录</string>
    <!--mine setting-->
    <!--mine setting myaddr-->
    <string name="default_addr">默认</string>
    <!--mine setting myaddr-->
</resources>
