<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    >
    <include layout="@layout/title_public"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:background="@color/white"
        >
        <LinearLayout
            android:id="@+id/lly_mine_setting_myaddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:orientation="horizontal"
            >
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="2"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_address"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mine_setting_word_size"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="4"
                >

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <!--   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text=">"
                       android:textColor="@color/color_main_mine_shezhi_content_black_word_textcolor"
                       android:layout_centerInParent="true"
                       />-->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/right_arrow"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_width_or_height"
            android:background="@color/black"
            />
        <LinearLayout
            android:id="@+id/lly_mine_setting_myname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"

            >
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="2"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mine_setting_word_size"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="4"
                >

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/right_arrow"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_width_or_height"
            android:background="@color/black"
            />
        <LinearLayout
            android:id="@+id/lly_mine_setting_update_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            >
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="2"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/updat_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mine_setting_word_size"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="4"
                >

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/right_arrow"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_width_or_height"
            android:background="@color/black"
            />
        <LinearLayout
            android:id="@+id/lly_mine_setting_findback_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            >
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="2"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_back_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mine_setting_word_size"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="4"
                >

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/right_arrow"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_width_or_height"
            android:background="@color/black"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            >
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="2"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_cache"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mine_setting_word_size"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="4"
                >
                <TextView
                    android:id="@+id/tv_main_mine_shezhi_disksize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1M"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mine_setting_word_size"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/right_arrow"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    />
            </RelativeLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_width_or_height"
            android:background="@color/black"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"

            >
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="2"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edition"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mine_setting_word_size"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="4"
                >
                <TextView
                    android:id="@+id/tv_main_mine_shezhi_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="V1.6.35"
                    android:textColor="@color/black"
                    android:textSize="@dimen/mine_setting_word_size"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/right_arrow"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_width_or_height"
            android:background="@color/black"
            android:visibility="gone"
            />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/split_width_or_height"
        android:background="@color/black"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/bt_main_mine_login_reg_userdata_content_reg_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_out_height"
            android:layout_margin="15dp"
            android:background="@drawable/login_out_half_radius_shape"
            android:text="@string/login_out"
            android:textColor="@color/white"
            android:textSize="@dimen/mine_setting_word_size"
            android:layout_alignParentTop="true"
            />
    </RelativeLayout>

</LinearLayout>